got a solid first draft of this. will work on more tomorrow

--- a/High level App Description.html
+++ b/High level App Description.html
@@ -124,6 +124,9 @@
   <li><strong>Bottom 4 holes open (holes 3-6)</strong> - Produces the 5th note (Pa)</li>
   <li><strong>Bottom 5 holes open (holes 2-6)</strong> - Produces the 6th note (Dha)</li>
   <li><strong>All 6 holes open</strong> - Produces the 7th note (Ni)</li>
+  <li>the spacing between the holes should visually look like this: <li>
+  <li>|x    x x x x x  x | 
+  <li>where the blow hole is furthest away from the finger holes and the 6th finger hole is slightly further than all the rest of the hole spacings<li>
 </ul>
 
 <h3>The Major Scale Pattern</h3>
