fixed some bugs. input extra notes doesn't display well. putting down for the day

--- a/High level App Description.html
+++ b/High level App Description.html
@@ -164,12 +164,11 @@
 
 <ol>
   <li>Select a flute from the dropdown menu</li>
-  <li>The flute is displayed showing all 7 notes of its major scale</li>
+  <li>The flute is displayed showing all 7 notes of its major scale in blue</li>
   <li>Optionally enter notes (space or comma separated) to see how they map onto the flute</li>
-  <li>Notes that are in your input that match the major scale notes for that flute appear normally</li>
-  <li>Notes that are not in your input but are in the major scale appear highlighted in red (don't play these)</li>
-  <li>Notes that are in your input that are NOT in the scale appear highlighted in green (extra notes)</li>
-  <li>Toggle between vertical and horizontal display orientations</li>
+  <li>All scale notes are shown in blue on the flute</li>
+  <li>Notes that are in your input but NOT in the scale appear highlighted in green above the flute (extra notes)</li>
+  <li>The display automatically switches between vertical and horizontal orientations based on screen size</li>
 </ol>
 
 <h2>Using the Flute Finder</h2>
@@ -179,9 +178,8 @@
   <li>Click "Recommend Flute"</li>
   <li>The app calculates which flute's scale contains the most matching notes</li>
   <li>The recommended flute is displayed with a match percentage</li>
-  <li>Notes that are in your input that match the major scale notes for that flute appear normally</li>
-  <li>Notes that are not in your input but are in the major scale appear highlighted in red (don't play these)</li>
-  <li>Notes that are in your input that are NOT in the scale appear highlighted in green (extra notes)</li>
+  <li>All scale notes for that flute are shown in blue on the flute</li>
+  <li>Notes that are in your input but NOT in the scale appear highlighted in green above the flute (extra notes)</li>
   <li>Click "Add Next Recommended Flute" to see additional flute options ranked by match quality</li>
 </ol>
 
