--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
       <div class="scale-info" id="scale-info"></div>
       <div class="flute-container" id="visualizer-flute"></div>
       <div class="legend">
-        <div class="legend-item"><span class="legend-dot default"></span> Matching note</div>
-        <div class="legend-item"><span class="legend-dot avoid"></span> Avoid (in scale, not in input)</div>
-        <div class="legend-item"><span class="legend-dot extra"></span> Extra (in input, not in scale)</div>
+        <div class="legend-item"><span class="legend-dot default"></span> Scale notes</div>
+        <div class="legend-item"><span class="legend-dot extra"></span> Extra notes (not in scale)</div>
       </div>
     </section>
 
